# aligned_audio_labeling

./: .env  .gitignore  Makefile  docker-compose.yml  requirements.txt  task.html
.devcontainer/: Dockerfile  devcontainer.json
nemo/: README.md  _wsgi.py  model.py  requirements.txt  supervisord.conf  uwsgi.ini
nemo/data/: example_task.json
processes/: audio_handler.py  cleaning.py  move_data.py  setup_mfa.sh
src/: environment.yml  pyproject.toml
src/audiotools/: audio_processor.py  utils.py
